[workspace]
members = [
    "checkpoint-stores/*",
    "datasources/*",
    "core",
    "decoders/*",
    "examples/*",
]
resolver = "2"

[workspace.dependencies]
arch_program = { version = "0.5.8" }
arch_sdk = { version = "0.5.8" }

atlas-arch = { path = "./core" }
atlas-rocksdb-checkpoint-store = { path = "./checkpoint-stores/rocksdb-store" }
atlas-arch-rpc-datasource = { path = "./datasources/arch-rpc" }
atlas-titan-datasource = { path = "./datasources/titan" }
atlas-rollback-datasource = { path = "./datasources/rollback" }


async-trait = "0.1.87"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.32.5", features = ["serde"] }
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
] }
rocksdb = "0.23.0"
thiserror = "1.0.61"
log = "0.4.25"
tokio-util = "0.7.13"
uuid = { version = "1.12.1", features = ["borsh", "serde", "v4"] }
futures = "0.3.31"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
hex = "0.4.3"
tracing = "0.1.40"

titan-client = { version = "0.1.46", features = ["tcp_client"] }
