[package]
name = "atlas-arch"
version.workspace = true
edition = "2021"
description = "Atlas Core: a modular, high-throughput indexing pipeline for decoding and processing accounts, instructions, transactions, and block-level events."
license = "MIT"
repository = "https://github.com/saturnBTC/atlas"

[features]
default = ["macros"]
macros = ["atlas-macros", "atlas-proc-macros"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }

arch_sdk = { workspace = true }
arch_program = { workspace = true }

titan-client = { workspace = true }

atlas-proc-macros = { workspace = true, optional = true }
atlas-macros = { workspace = true, optional = true }
