[package]
name = "atlas-proc-macros"
version.workspace = true
edition = "2021"
description = "Procedural macros for Atlas"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
borsh-derive-internal = { workspace = true }
hex = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
syn = { workspace = true, features = ["full"] }
