[package]
name = "atlas-rocksdb-checkpoint-store"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/saturnBTC/atlas"
description = "Atlas checkpoint store implementation backed by RocksDB."

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

atlas-arch = { workspace = true }
