[package]
name = "atlas-example-rollback-pipe"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

arch_program = { workspace = true }
arch_sdk = { workspace = true }

atlas-arch = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


